<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/carbon_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/violet_light"
            android:paddingBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusBottomEnd="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusBottomEnd="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_matricula" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_profile" />

    </LinearLayout>
</ScrollView>
